[package]
name = "rust-wireshark"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.27"
eframe = "0.27"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true

